--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -60,7 +60,7 @@ jobs:
       uses: Mattraks/delete-workflow-runs@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        repository: ${{ secrets.GITHUB_TOKEN }}
+        repository: ${{ github.repository }}
         retain_days: 1
         keep_minimum_runs: 1
 
