--- a/.github/workflows/Build-x86-Docker.yml
+++ b/.github/workflows/Build-x86-Docker.yml
@@ -51,7 +51,7 @@ jobs:
         sudo -E apt -qq update
         sudo -E apt -y purge azure-cli* docker* ghc* zulu* llvm* firefox google* dotnet* powershell* openjdk* mysql* php* mongodb* dotnet* moby* snap*
         sudo -E apt -y full-upgrade
-        sudo -E apt -qq install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
+        sudo -E apt -y -qq install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
         sudo -E systemctl daemon-reload
         sudo -E apt -y -qq autoremove --purge
         sudo -E apt -qq clean
