--- a/.github/workflows/Build-ARMv8.yml
+++ b/.github/workflows/Build-ARMv8.yml
@@ -171,7 +171,7 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: OpenWrt-ARMv8 ${{ env.PRODUCT_NAME }}${{ env.DATE }}
+        name: OpenWrt-ARMv8 ${{ env.DATE }}
         tag: ${{ env.TAG_DATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
